@@ -5,6 +5,8 @@ ubiquity (2.11.15) UNRELEASED; urgency=low
     gracefully to avoid desynchronising the debconf protocol if the
     subprocess is killed between sending a command and receiving the
     response (LP: #1023036).
+  * Make user-setup-encrypted-swap wait until partitioning has finished
+    before attempting to adjust /target/etc/fstab (LP: #1024343).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Jul 2012 16:40:57 +0100
 
